style: fix footer covering content

--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   padding: 0 24px;
   position: fixed;
+  margin-top: 20px;
   bottom: 0;
   height: 60px;
   width: 100%;
