--- a/src/pages/HomePage/homePage.module.scss
+++ b/src/pages/HomePage/homePage.module.scss
@@ -1,5 +1,5 @@
 main {
-  margin: 0 24px;
+  margin: 0 24px  100px;
 }
 
 .principal {
